RESOLVED FIXED45509
REGRESSION: r61215 broke web views with transparent backgrounds
https://bugs.webkit.org/show_bug.cgi?id=45509
Summary REGRESSION: r61215 broke web views with transparent backgrounds
Simon Fraser (smfr)
Reported 2010-09-09 18:04:16 PDT
r61215 caused RenderView to paint the viewport background when the document element's renderer is known to not fill opaquely paint the entire viewport, i.e. more often than it did before. This exposed a latent, long-standing bug which was introducted in r14638 (the RenderCanvas -> RenderView rename), where a call to view()->isTransparent() was not converted to frameView()->isTransparent(), yet happened to still compile because of RenderObject::isTransparent(). This resulted in us painting the viewport background, even when WebView clients explicitly said that they wanted a transparent WebView.
Attachments
Simon Fraser (smfr)
Comment 1 2010-09-09 18:08:42 PDT
Simon Fraser (smfr)
Comment 2 2010-09-09 18:08:51 PDT
Simon Hausmann
Comment 3 2010-09-30 06:52:55 PDT
*** Bug 46458 has been marked as a duplicate of this bug. ***
Simon Hausmann
Comment 4 2010-09-30 06:59:05 PDT
<cherry-pick-for-backport: r67137>
Simon Hausmann
Comment 5 2010-09-30 07:00:41 PDT
Revision r67137 cherry-picked into qtwebkit-2.1 with commit bf85131 <http://gitorious.org/webkit/qtwebkit/commit/bf85131>
Note You need to log in before you can comment on or make changes to this bug.